simplify transaction list
